@@ -3,19 +3,20 @@ package co.edu.utp.gia.sms.beans;
 import co.edu.utp.gia.sms.beans.util.MessageConstants;
 import co.edu.utp.gia.sms.dtos.ReferenciaDTO;
 import co.edu.utp.gia.sms.exportutil.ReferenceToRIS;
-import co.edu.utp.gia.sms.negocio.ReferenciaEJB;
-import lombok.Getter;
-import lombok.Setter;
-
+import co.edu.utp.gia.sms.negocio.ReferenciaService;
 import jakarta.faces.context.ExternalContext;
 import jakarta.faces.context.FacesContext;
 import jakarta.faces.view.ViewScoped;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
+import lombok.Getter;
+import lombok.Setter;
+import lombok.extern.java.Log;
+
 import java.io.IOException;
 import java.io.OutputStream;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.logging.Level;
 /**
  * Clase controladora de interfaz web que se encarga de presentar un resumen de las referencias seleccionadas.
  *
@@ -28,23 +29,20 @@ import java.util.stream.Collectors;
  */
 @Named
 @ViewScoped
+@Log
 public class ResumenReferenciasSeleccionadasBean extends GenericBean<ReferenciaDTO> {
-	/**
-	 * Variable que representa el atributo serialVersionUID de la clase
-	 */
-	private static final long serialVersionUID = -4192800052066233993L;
 	@Getter
 	@Setter
 	private List<ReferenciaDTO> referencias;
 	@Inject
-	private ReferenciaEJB referenciaEJB;
+	private ReferenciaService referenciaService;
 
 
 	public void inicializar() {
 
 		if (getRevision() != null) {
-//			referencias = referenciaEJB.obtenerTodas(getRevision().getId(), 3);
-			referencias = referenciaEJB.findByPaso(getPasoAnterior().getId());
+//			referencias = referenciaService.obtenerTodas(getRevision().getId(), 3);
+			referencias = referenciaService.findByPaso(getPasoAnterior().getId());
 		}
 	}
 	
@@ -64,8 +62,7 @@ public class ResumenReferenciasSeleccionadasBean extends GenericBean<ReferenciaD
 	    	ReferenceToRIS rtr = new ReferenceToRIS(output);
 	    	rtr.procesarReferencias(referencias);
 		} catch (IOException e) {
-			
-			e.printStackTrace();
+			log.log(Level.ALL,"Error al exportar las referencias",e);
 		}
 	    // Now you can write the InputStream of the file to the above OutputStream the usual way.
 	    // ...
@@ -83,22 +80,22 @@ public class ResumenReferenciasSeleccionadasBean extends GenericBean<ReferenciaD
 			n = Long.parseLong( re.getSpsid().substring(3) );
 		}
 		
-		for (ReferenciaDTO referencia : referencias.stream().filter(r->r.getSpsid() == null).collect(Collectors.toList())) {
+		for (ReferenciaDTO referencia : referencias.stream().filter(r->r.getSpsid() == null).toList()) {
 			n++;
 			referencia.setSpsid( String.format("SPS%0"+digitos+"d", n));
-			referenciaEJB.updateSPS( referencia.getId() , referencia.getSpsid() );
+			referenciaService.updateSPS( referencia.getId() , referencia.getSpsid() );
 		}
 	}
 	
 	public void limpiar() {
 		for (ReferenciaDTO referencia : referencias) {
 			referencia.setSpsid(null);
-			referenciaEJB.updateSPS( referencia.getId() , referencia.getSpsid() );
+			referenciaService.updateSPS( referencia.getId() , referencia.getSpsid() );
 		}
 	}
 
 	public void siguientePaso(){
-		referenciaEJB.avanzarReferecias(getPasoAnterior().getId());
+		referenciaService.avanzarReferecias(getPasoAnterior().getId());
 		mostrarMensajeGeneral(getMessage(MessageConstants.OPERACION_FINALIZADA));
 	}
 }
